Initial work. Clippy fails and breaks without param
